# bqplot

./: .bowerrc  .gitignore  .gitmodules  .mailmap  .npmignore  .travis.yml  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE.md  bower.json  environment.yml  fast_lasso.ipynb  index.html  install.json  main.py  mkdocs.yml  objects.inv  package.json  pyproject.toml  pytest.ini  readthedocs.yml  scattermega_example.ipynb  setup.cfg  setup.py  sitemap.xml  test-environment.yml  toolbar.ipynb
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  main.yml  publish_docs.yml  server  update_galata_references.yaml
.nblink/: environment.yml  nblink-lock.json
api/axes/: index.html
api/figure/: index.html
api/interactions/: index.html
api/market_map/: index.html
api/marks/: index.html
api/pyplot/: index.html
api/scales/: index.html
api/toolbar/: index.html
bqplot/: EuropeMapData.json  EuropeanCountries.json  USMapData.json  __init__.py  _version.py  axes.py  colorschemes.py  default_tooltip.py  extras.py  figure.py  index.js  install.py  interacts.py  map.py  market_map.py  marks.py  overlays.py  plotting_widgets.py  pyplot.py  scales.py  tile_map.py  toolbar.py  traits.py
bqplot/map_data/: EuropeMap.json  USCountiesMap.json  USCountiesMapData.json  USMapData.json  WorldMap.json  WorldMapData.json
bqplot/nbextension/: Axis.js  AxisModel.js  Bars.js  BarsModel.js  BaseModel.js  Boxplot.js  BoxplotModel.js  BrushSelector.js  BrushSelectorOverlay.js  ColorAxis.js  ColorScale.js  ColorScaleModel.js  ColorUtils.js  DateColorScale.js  DateColorScaleModel.js  DateScale.js  DateScaleModel.js  FastIntervalSelector.js  Figure.js  FigureModel.js  FlexLine.js  GeoScale.js  GeoScaleModel.js  GridHeatMap.js  GridHeatMapModel.js  HandDraw.js  HandDrawModel.js  Hist.js  HistModel.js  IndexSelector.js  IndexSelectorOverlay.js  Interaction.js  IntervalSelectorOverlay.js  Label.js  LabelModel.js  LassoSelector.js  LinearColorScale.js  LinearColorScaleModel.js  LinearScale.js  LinearScaleModel.js  (+50 more)
bqplot/pyplot/: __init__.py  pyplot.py
bqplot/testing/: __init__.py  testcontroller.py
conda.recipe/: build.sh  meta.yaml
contributing/: index.html
custom_theme/: 404.html
docs/: Makefile  api-doc.md  contributing.md  environment.yml  index.md  installation.md  make.bat  migrate.md  mkdocs-environment.yml
docs/api/: axes.md  figure.md  interactions.md  market_map.md  marks.md  pyplot.md  scales.md  toolbar.md  tooltip.md
docs/source/: api_documentation.rst  bqplot.rst  conf.py  index.rst  introduction.rst  usage.ipynb  usage.rst
docs/usage/: axes.md  figure.md  object-model.md  pyplot.md  scales.md  updating-plots.md
examples/: Advanced Plotting.ipynb  Animations.ipynb  Axis Properties.ipynb  Bars.ipynb  Basic Plotting.ipynb  Boxplot.ipynb  Candles.ipynb  FlexLine.ipynb  GridHeatMap.ipynb  Hist.ipynb  Image.ipynb  Index.ipynb  Interaction Layer.ipynb  Introduction.ipynb  Label.ipynb  Lines.ipynb  Map.ipynb  Mark Interactions.ipynb  MarkerLines.ipynb  Market Map.ipynb  Pie.ipynb  Plotting Dates.ipynb  Pyplot.ipynb  Scatter.ipynb  ScatterMega.ipynb  Site Map.ipynb  Tutorials.ipynb  Untitled.ipynb  Untitled1.ipynb  Wealth of Nations.ipynb  plot_lines_basic.py  plot_ohlc_basic.py  plot_pie_basic.py  plot_scatter_basic.py
examples/Advanced Plotting/: Advanced Plotting.ipynb  Animations.ipynb  Axis Properties.ipynb  Plotting Dates.ipynb
examples/Applications/: Building a Dashboard for Neural Network Training.ipynb  Feature_Vector_Distribution-Iris-Digits.ipynb  Index.ipynb  Mobile Patent Suits.ipynb  Neural Network.ipynb  Outlier Detection.ipynb  US Elections 2016.ipynb  Visualizing the US Elections.ipynb  Wealth of Nations.ipynb
examples/Basic Plotting/: Basic Plotting.ipynb  Introduction.ipynb  Pyplot.ipynb
examples/Interactions/: Interaction Layer.ipynb  Mark Interactions.ipynb  MouseInteract.ipynb  Selectors.ipynb
examples/Marks/: Bars.ipynb  Boxplot.ipynb  Candles.ipynb  FlexLine.ipynb  Graph.ipynb  GridHeatMap.ipynb  HeatMap.ipynb  Hist.ipynb  Image.ipynb  Label.ipynb  Lines.ipynb  Map.ipynb  Market Map.ipynb  Pie.ipynb  Scatter.ipynb
examples/Plotting Widgets/: Radar.ipynb
examples/Scales/: Color Scales.ipynb
examples/Tutorials/: Index.ipynb  (+10 more)
installation/: index.html
js/: .eslintrc.js  .npmignore  .prettierignore  README.md  babel.config.js  jest.config.js  karma.conf.js  lab.webpack.config.js  package-lock.json  package.json  tsconfig-test.json  tsconfig.eslint.json  tsconfig.json  tsconfigbase.json  webpack.config.js
jslab/: LICENSE  Readme.md  index.js  package.json
search/: search_index.json
testing/: __main__.py
tests/: binary_serialization_test.py  conftest.py  marks_test.py  selector_test.py
ts/: README.md  karma.conf.js  package-lock.json  package.json  tsconfig.json
ui-tests/: README.md  jupyter_server_config.py  package-lock.json  package.json  playwright.config.js
(+425 files in other folders)
