[metadata]
name = bqplot
description = Interactive plotting for the Jupyter notebook, using d3.js and ipywidgets.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
license_file = LICENSE
author = The BQplot Development Team
url = https://github.com/bqplot/bqplot
keywords = ipython, jupyter, widgets, graphics, plotting, d3

[options]
packages = find:
install_requires =
    ipywidgets>=8.0.1,<9
    traitlets>=4.3.0
    traittypes>=0.0.6
    numpy>=1.10.4,<2.0.0
    pandas>=1.0.0,<2.0.0
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
python_requires = >=3.6
include_package_data = True
zip_safe = False

[bdist_wheel]
universal=1
