[metadata]
name = bqplot
description = Interactive plotting for the Jupyter notebook, using d3.js and ipywidgets.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
license_file = LICENSE
author = The BQplot Development Team
url = https://github.com/bqplot/bqplot
keywords = ipython, jupyter, widgets, graphics, plotting, d3

[options]
packages = find:
install_requires =
    ipywidgets>=7.5.0,<9
    traitlets>=4.3.0
    traittypes>=0.0.6
    numpy>=1.10.4
    pandas>=1.0.0,<3.0.0
    bqscales>=0.3.1,<0.4
classifiers =
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 2
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.packages.find]
exclude = 
	tests

[bdist_wheel]
universal=1
